tests/fail/key_access_fail.stderr
error[E0308]: mismatched types
  --> tests/fail/key_access_fail.rs:5:1
   |
5  | #[flat_regex]
   | ^^^^^^^^^^^^^ expected struct `std::string::String`, found struct `CString`
...
11 |         key_access = "some_modul::as_str"
   |                      -------------------- arguments to this function are incorrect
   |
   = note: expected reference `&std::string::String`
              found reference `&CString`
note: function defined here
  --> tests/fail/key_access_fail.rs:20:12
   |
20 |     pub fn as_str(s: &String) -> Result<&str, Utf8Error> {
   |            ^^^^^^ ----------
   = note: this error originates in the attribute macro `flat_regex` (in Nightly builds, run with -Z macro-backtrace for more info)
